Refactor BudgetSummaryProjection to use CategoryEntity
- Update BudgetSummaryProjection to accept a CategoryEntity instead of separate category fields.
- Modify JpaBudgetRepository to construct BudgetSummaryProjection with CategoryEntity.
- Adjust DefaultBudgetRepository to retrieve category details from the new CategoryEntity.